<resources>
    <string name="app_name">Navigation Task</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="feed_screen_greeting">Good to see you</string>
    <string name="read_more">Read more</string>
    <string name="logout">Logout</string>
    <string name="description">The purpose of this task is to learn practically how to navigate between different fragments.</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_full_name">Invalid Full Name</string>
    <string name="sign_in">Sign In</string>
    <string name="feed">Feed</string>
    <string name="error_existing_user">User with this email address already exists.</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_error">Your session has expired, please log in again.</string>
    <string name="delete_account_success">Your account has been deleted successfully.</string>
    <string name="view_all">View All</string>
    <string name="view_all_artists">View all artists clicked</string>
    <string name="view_all_songs">View all songs clicked</string>
    <string name="song_main_header">Top Songs</string>
    <string name="song_secondary_header">Checkout our top songs this month</string>
    <string name="artist_main_header">Top music artists</string>
    <string name="artist_secondary_header">Checkout our top artists this month</string>
    <string name="search">Search …</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="oops">Oops!</string>
    <string name="song_error">We couldn’t load songs at the moment. \n Please try again later.</string>
    <string name="btn_retry">Retry</string>
    <string name="loading_songs_failed">Oops! Something went wrong. \n We couldn’t load the rest of the songs.</string>
    <string name="loading_artists_failed">Oops! Something went wrong. \n We couldn’t load the rest of the artists.</string>
    <string name="feed_error">We couldn’t load the feed at the moment. \n Please try again later.</string>
    <string name="total_albums">Total albums:</string>
    <string name="artist_error">We couldn’t load artists at the moment. \n Please try again later.</string>
    <string name="no_results_found">Hmm, there are no results for your search..</string>
    <string name="spotify">Spotify</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="albums">Albums</string>
    <string name="fans">Fans</string>
    <string name="likes">Likes</string>
    <string name="views">Views</string>
    <string name="comments">Comments</string>
    <string name="genre">Genre</string>
</resources>