<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="156dp"
            android:layout_marginBottom="17dp"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans"
            android:maxLines="1"
            android:text="@string/artists"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/grp_search_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/background_rounded"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_margin="11dp"
            android:src="@drawable/ic_search" />

        <EditText
            android:id="@+id/edit_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:autofillHints="name"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_artists"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:clipToPadding="false"
        android:paddingTop="14dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/grp_artist_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="255dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/oops"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/artist_error"
            android:textSize="13sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_retry" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_no_results_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:ellipsize="end"
        android:fontFamily="@font/open_sans"
        android:maxLines="1"
        android:text="@string/no_results_found"
        android:textSize="13sp"
        android:visibility="gone" />

</LinearLayout>