<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="17dp"
            android:src="@drawable/ic_back" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/scroll_artist_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="vertical"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    app:cardCornerRadius="24dp">

                    <ImageView
                        android:id="@+id/img_artist"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/open_sans"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="John Doe" />

                    <TextView
                        android:id="@+id/txt_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="1dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/open_sans"
                        android:maxLines="1"
                        android:textSize="15sp"
                        tools:text="Alternative Rock" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:layout_marginTop="35dp"
                        android:backgroundTint="@color/details_button"
                        android:fontFamily="@font/open_sans_bold"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        android:letterSpacing="0"
                        android:text="@string/spotify"
                        android:textAllCaps="false"
                        android:textSize="15sp"
                        app:cornerRadius="14dp" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:background="@color/separator_color" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.example.navigationtask.common.ui.InfoView
                        android:id="@+id/info_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:isSeparatorVisible="true"
                        app:middleIcon="@drawable/ic_country"
                        app:topLabel="@string/country" />

                    <com.example.navigationtask.common.ui.InfoView
                        android:id="@+id/info_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:isSeparatorVisible="true"
                        app:middleIcon="@drawable/ic_gender"
                        app:topLabel="@string/gender" />

                    <com.example.navigationtask.common.ui.InfoView
                        android:id="@+id/info_album_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:isSeparatorVisible="true"
                        app:middleIcon="@drawable/ic_genre"
                        app:topLabel="@string/albums" />

                    <com.example.navigationtask.common.ui.InfoView
                        android:id="@+id/info_fans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:middleIcon="@drawable/ic_fans"
                        app:topLabel="@string/fans" />

                </LinearLayout>

            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_fan_art"
                android:layout_width="match_parent"
                android:layout_height="427dp"
                android:layout_marginTop="15dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_gallery" />

            <com.example.navigationtask.common.ui.ExpandableTextView
                android:id="@+id/txt_expand_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="24dp"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="true"
                android:fontFamily="@font/open_sans"
                android:maxLines="2"
                android:textSize="15sp"
                app:linesInCollapsedMode="2" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>